fix(swing): restore complete global game settings